--- a/README
+++ b/README
@@ -42,13 +42,13 @@ http://xxx.xxx.xxx.xxx:xxxx/geoserver/rest/rules.json
 Requires
 ========
 
-https://share.realvista.it/svn/lait/GeoserverUtils/
+https://github.com/e-geos/egs-utils
 
 =======
 Install
 =======
 
-First of all, we need the core library egs-utils (https://share.realvista.it/svn/lait/GeoserverUtils/trunk).
+First of all, we need the core library egs-utils (https://github.com/e-geos/egs-utils).
 Download and compile it using:
 
 $ mvn clean install
@@ -62,8 +62,8 @@ $ mvn clean package
 If all gets well, you can procede to modify Geoserver (http://geoserver.org).
 Download the stable release (this version is tested for 2.6.0), war package.
 Open the war with a compress program and add the following file in WEB-INF/lib:
-  - egeosmanager-0.2.jar (taken in target folder)
-  - egs-utils-0.1.jar (taken from maven repository)
+  - egeosmanager-1.1.jar
+  - egs-utils-1.0.jar
   - jasypt-1.9.2.jar (taken from maven repository)
   - commons-codec-1.9.jar (taken from maven repository)
   - commons-io-2.4.jar (taken from maven repository)
