--- a/README
+++ b/README
@@ -40,23 +40,18 @@ http://xxx.xxx.xxx.xxx:xxxx/geoserver/rest/rules.json
 http://xxx.xxx.xxx.xxx:xxxx/geoserver/rest/layertree.json
   - GET: returns a list of layers divided by store type
   
+http://xxx.xxx.xxx.xxx:xxxx/geoserver/rest/gridsets.json  
+  - GET: returns a list of gridsets 
   
 ========
 Requires
 ========
 
-https://github.com/e-geos/egs-utils/releases/tag/v2.0
+Geoserver 2.9.1 as environment.
 
 =======
 Install
 =======
-
-First of all, we need the core library egs-utils (https://github.com/e-geos/egs-utils/releases/tag/v2.0).
-Download and compile it using:
-
-$ mvn clean install
-
-This step will install egs-utils-2.0.jar in maven repository.
 
 Compile EgeosManager by maven:
 
@@ -65,8 +60,7 @@ $ mvn clean package
 If all gets well, you can procede to modify Geoserver (http://geoserver.org).
 Download the stable release (this version is tested for 2.9.1), war package.
 Open the war with a compress program and add the following file in WEB-INF/lib:
-  - egeosmanager-3.0.jar (taken in target folder)
-  - egs-utils-2.0.jar (taken from maven repository)
+  - egeosmanager-3.2.jar (taken in target folder)
 
 All files should be downloaded during compile task, so you should found them 
 in your maven repository. 
